Fixed the borders not showing

--- a/src/tailwindStyles/styles.module.css
+++ b/src/tailwindStyles/styles.module.css
@@ -8,20 +8,11 @@
 }
 
 /* Full-width input fields */
-/* input[type=text], input[type=password] { */
 .fullWidthInput {
     width: 100%;
     padding: 15px;
     margin: 5px 0 22px 0;
     display: inline-block;
-    border: none;
-    /* background: #f1f1f1; */
-}
-
-/* input[type=text]:focus, input[type=password]:focus { */
-.fullWidthInput:focus {
-    /* background-color: #ddd; */
-    outline: none;
 }
 
 /* Overwrite default styles of hr */
